do we do dum de dum

--- a/tutorial/dlr_evenings_txt.html
+++ b/tutorial/dlr_evenings_txt.html
@@ -7,8 +7,8 @@
       Tutorial Case
 
       DLR Nightly Schedule
-      Author: 
-      Date:   
+      Author: Connor , Jenna
+      Date:   11/ 20/ 28
 
       Filename:   dlr_evenings.html
 
