modified:   case1/mi_pricing.html 	modified:   case1/mi_tables.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	   
 	   Filename: index.html
 	   -->
-	   <title>Tutorial 5</title>
+	   <title>Tutorial 6</title>
 	   <meta charset="utf-8" />
 	   <meta name="viewport" content="width=device-width, initial-scale=1" />
 	   <link href="reset.css" rel="stylesheet" />
@@ -25,7 +25,7 @@
 				<ul>
 					<li><a href = "./tutorial/tf_home.html">Tutorial</a></li>
 					<li><a href = "./review/tf_tips.html">Review</a></li>
-					<li><a href = "./case1/gp_cover.html">Case 1</a></li>
+					<li><a href = "./case1/mi_pricing.html">Case 1</a></li>
 					<li><a href = "./case2/wc_hole01.html">Case 2</a></li>
 					<li><a href = "./case3/cw_home.html">Case 3</a></li>
 					<li><a href = "./case4/jb_home.html">Case 4</a></li>
