--- a/case1/mi_pricing.html
+++ b/case1/mi_pricing.html
@@ -50,8 +50,9 @@
          
     <table id="pricing">
             <colgroup>
-            <col id="firstCol" >
+            <col id="firstCol" />
             <col class="dataCols" span="4" />
+            </colgroup>
          <thead>
             <tr>
                 <th rowspan="2">Select A Plane</th>
@@ -105,43 +106,44 @@
                 Summary: Perfect for a small business running multiple media streams, demanding reduced lag time and fast data delivery.
                 </td>
             </tr>
+        </tfoot>
         <tbody>
             <tr>
                 <th>Download Speed</th>
-                <th>3 Mbps</th>
-                <th>15 Mbps</th>
-                <th>25 Mbps</th>
-                <th>50 Mbps</th>
+                <td>3 Mbps</td>
+                <td>15 Mbps</td>
+                <td>25 Mbps</td>
+                <td>50 Mbps</td>
             </tr>
             <tr>
                 <th>Upload Speed</th>
-                <th>512 Kbps</th>
-                <th>6 Mbps</th>
-                <th>10 Mbps</th>
-                <th>20 Mbps</th>
+                <td>512 Kbps</td>
+                <td>6 Mbps</td>
+                <td>10 Mbps</td>
+                <td>20 Mbps</td>
             </tr>
             <tr>
                 <th>Cloud Storage</th>
-                <th>2 Gb</th>
-                <th>5 Gb</th>
-                <th>15 Gb</th>
-                <th>40 Gb</th>
+                <td>2 Gb</td>
+                <td>5 Gb</td>
+                <td>15 Gb</td>
+                <td>40 Gb</td>
             </tr>
             <tr>
                 <th>Email Accounts</th>
-                <th>2 Accounts</th>
-                <th>3 Accounts</th>
-                <th>5 Accounts</th>
-                <th>10 Accounts</th>
+                <td>2 Accounts</td>
+                <td>3 Accounts</td>
+                <td>5 Accounts</td>
+                <td>10 Accounts</td>
             </tr>
             <tr>
                 <th>24/7 Support</th>
-                <th>yes</th>
-                <th>Yes</th>
-                <th>YEs</th>
-                <th>YES</th>
+                <td>yes</td>
+                <td>Yes</td>
+                <td>YEs</td>
+                <td>YES</td>
             </tr>
-         </body>
+         </tbody>
       </table>
    </article>
    
