modified:   case1/mi_tables.css 	new file:   case2/.jpf_sudoku.html.kate-swp 	renamed:    case2/jpf_sudoku_txt.css -> case2/jpf_sudoku.css 	renamed:    case2/jpf_sudoku_txt.html -> case2/jpf_sudoku.html

--- a/case2/jpf_sudoku.html
+++ b/case2/jpf_sudoku.html
@@ -7,8 +7,8 @@
       Case Problem 2
 
       Sudoku Puzzle
-      Author: 
-      Date:   
+      Author: Kenaz & Lauren(absent)
+      Date:   11/27/18
 
       Filename:   jpf_sudoku.html
 
@@ -37,6 +37,62 @@
    </header>
    
    <section>
+        <table class="spuzzle">
+        <caption>Sudoku</caption>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>1</th>
+                    <th>2</th>
+                    <th>3</th>
+                    <th>4</th>
+                    <th>5</th>
+                    <th>6</th>
+                    <th>7</th>
+                    <th>8</th>
+                    <th>9</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>A</th>
+                    <td rowspan="3" colspan="3" class="greenBox"></td>
+                    <td rowspan="3" colspan="3"></td>
+                    <td rowspan="3" colspan="3" class="greenBox"></td>
+                </tr>
+                <tr>
+                    <th>B</th>
+                </tr>
+                <tr>
+                    <th>C</th>
+                </tr>
+                <tr>
+                    <th>D</th>
+                    <td rowspan="3" colspan="3"></td>
+                    <td rowspan="3" colspan="3" class="greenBox"></td>
+                    <td rowspan="3" colspan="3"></td>
+                </tr>
+                <tr>
+                    <th>E</th>
+                </tr>
+                <tr>
+                    <th>F</th>
+                </tr>
+                <tr>
+                    <th>G</th>
+                    <td rowspan="3" colspan="3" class="greenBox"></td>
+                    <td rowspan="3" colspan="3"></td>
+                    <td rowspan="3" colspan="3" class="greenBox"></td>
+                </tr>
+                <tr>
+                    <th>H</th>
+                </tr>
+                <tr>
+                    <th>I</th>
+                </tr>
+   
+   
+        </table>
    </section>
 
    <article>
